--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["express", "nodejs", "api", "productos", "carritos"],
+  "keywords": [
+    "express",
+    "nodejs",
+    "api",
+    "productos",
+    "carritos"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^8.0.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
