--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "comision-77525",
   "version": "1.0.0",
-  "description": "Servidor para gestión de productos y carritos de compra",
+  "description": "Servidor para gestión de productos y carritos de compra con MongoDB",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate": "node scripts/migrate-data.js"
   },
-  "keywords": [
-    "express",
-    "nodejs",
-    "api",
-    "productos",
-    "carritos"
-  ],
+  "keywords": ["express", "nodejs", "api", "productos", "carritos", "mongodb", "websockets"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^8.0.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.7.2",
+    "express-handlebars": "^7.1.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
